deprecated dependency phidias.js in favor of a built-in version

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phidias.css": "^0.1.0",
-    "phidias.js": "^1.0.0",
+    "dexie": "^1.4.2",
+    "whatwg-fetch": "^1.0.0",
     "quill": "^1.1.5",
     "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
