--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "fullcalendar": "^3.1.0",
+    "jquery": "^3.1.1",
+    "localforage": "^1.4.3",
     "vue": "^2.1.0"
   },
   "devDependencies": {
