--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "sortablejs": "^1.5.0-rc1",
     "url-loader": "^0.5.7",
     "velocity-animate": "^1.3.1",
+    "vue-google-maps": "https://github.com/Kofre/vue-google-maps/archive/v1.1.1.tar.gz",
     "vue-loader": "^10.0.0",
     "vue-router": "^2.1.0",
     "vue-style-loader": "^1.0.0",
