--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
+    "fullcalendar": "^3.1.0",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "localforage": "^1.4.3",
     "moment": "^2.17.0",
