--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fullcalendar": "^3.1.0",
     "jquery": "^3.1.1",
     "localforage": "^1.4.3",
-    "vue": "^2.1.0"
+    "vue": "^2.1.0",
+    "vue-google-maps": "https://github.com/Kofre/vue-google-maps/archive/v1.1.1.tar.gz"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
