--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "url-loader": "^0.5.7",
     "velocity-animate": "^1.3.1",
     "vue-google-maps": "https://github.com/Kofre/vue-google-maps/archive/v1.1.1.tar.gz",
+    "vue-i18n": "^5.0.3",
     "vue-loader": "^10.0.0",
     "vue-router": "^2.1.0",
     "vue-style-loader": "^1.0.0",
