--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.1.1",
     "localforage": "^1.4.3",
     "vue": "^2.1.0",
-    "vue-google-maps": "https://github.com/Kofre/vue-google-maps/archive/v1.1.1.tar.gz"
+    "vue-google-maps": "https://github.com/Kofre/vue-google-maps/archive/v1.1.1.tar.gz",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
