--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.1.0",
     "function-bind": "^1.0.2",
+    "fuse.js": "^2.6.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "jquery": "^3.1.1",
