--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fullcalendar": "^3.1.0",
     "jquery": "^3.1.1",
     "localforage": "^1.4.3",
+    "qrious": "^2.2.0",
     "vue": "^2.1.0",
     "vue-google-maps": "https://github.com/Kofre/vue-google-maps/archive/v1.1.1.tar.gz",
     "vuex": "^2.2.1"
