--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phidias.css": "^0.1.0",
+    "qrious": "^2.2.0",
     "quill": "^1.1.5",
     "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
